--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -16,6 +16,10 @@
         <label for="name">Hero Power</label>
         <input type="text" id="power" class="form-control" formControlName="power">
     </div>
+    <div class="form-group">
+        <label for="image">Image</label>
+        <input type="file" id="image" class="form-control" formControlName="image">
+    </div>
     <button type="button" (click)="goBack()">go back</button>
     <button type="submit" name="save" [disabled]="!heroForm.valid">save</button> 
 </form>
