--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
         <label for="image">Image</label>
-        <input type="file" id="image" class="form-control" formControlName="image" (change)="onFileSelect($event)">
+        <input type="file" accept="image/*" id="image" class="form-control" formControlName="image" (change)="onFileSelect($event)">
     </div>
     <button type="button" (click)="goBack()">go back</button>
     <button type="submit" name="save" [disabled]="!heroForm.valid">save</button> 
